k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd-new
  labels:
    name: argocd-new
